# tudat

./: .bumpversion.cfg  CMakeLists.txt  LICENSE  README.md  environment.yml  tudat-config.cmake.in
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml
.github/workflows/: build_and_test.yml  bump_dev_version_nightly.yml
applications/: CMakeLists.txt
cmake_modules/: FindCSPICE.cmake  TudatFindBoost.cmake  TudatLinkLibraries.cmake  compiler.cmake
cmake_modules/yolo/: YOLOProjectAddExecutable.cmake  YOLOProjectAddLibrary.cmake  YOLOProjectAddTestCase.cmake
examples/tudat/satellite_propagation/: CMakeLists.txt  earthOrbiterBasicStateEstimation.cpp
include/tudat/: config.hpp
include/tudat/astro/: orbit_determination.h
include/tudat/astro/aerodynamics/: aerodynamics.h  atmosphereModel.h  marsDtmAtmosphereModel.h  rarefiedFlowAerodynamicCoefficientGenerator.h  rarefiedFlowAerodynamicCoefficientInterface.h  rarefiedFlowInteractionModel.h
include/tudat/astro/basic_astro/: dateTime.h  timeConversions.h
include/tudat/astro/earth_orientation/: earthOrientationCalculator.h  terrestrialTimeScaleConverter.h
include/tudat/astro/electromagnetism/: radiationPressureAcceleration.h  radiationPressureTargetModel.h  radiationPressureTorque.h  reflectionLaw.h
include/tudat/astro/ephemerides/: compositeEphemeris.h  itrsToGcrsRotationModel.h  rotationalEphemeris.h
include/tudat/astro/gravitation/: librationPoint.h  librationPointFunctions.h
include/tudat/astro/ground_stations/: groundStation.h
include/tudat/astro/mission_segments/: gravityAssist.h  lambertTargeter.h
include/tudat/astro/observation_models/: frequencyOfArrivalDifferenceObservationModel.h  lightTimeSolution.h  linkTypeDefs.h  observableTypes.h  observationModel.h  observationViabilityCalculator.h  timeOfArrivalDifferenceObservationModel.h  twoWayDopplerObservationModel.h
include/tudat/astro/propagators/: customStateDerivative.h  dynamicsStateDerivativeModel.h  integrateEquations.h  stateDerivativeCircularRestrictedThreeBodyProblem.h  variationalEquations.h
include/tudat/astro/reference_frames/: aerodynamicAngleCalculator.h
include/tudat/astro/system_models/: timingSystem.h  vehicleExteriorPanels.h  vehicleSystems.h
include/tudat/basics/: utilities.h
include/tudat/interface/spice/: spiceInterface.h
include/tudat/io/: mpcFileReading.h  readMpcFile.h  solarActivityData.h
include/tudat/math/filters/: filter.h
include/tudat/math/interpolators/: linearInterpolator.h  lookupScheme.h
include/tudat/math/statistics/: powerLawNoiseGeneration.h
include/tudat/simulation/: BaseSimulator.h  SingleArcSimulator.h  helpers.h  simulation.h
include/tudat/simulation/environment_setup/: body.h  createAtmosphereModel.h  createEphemeris.h  createFlightConditions.h  createGravityField.h  createGroundStations.h  createRadiationPressureTargetModel.h  createRotationModel.h  createSystemModel.h
include/tudat/simulation/estimation_setup/: createEstimatableParameters.h  createObservationModel.h  createObservationViability.h  estimatableParameterSettings.h  mpcObservations.h  observations.h  orbitDeterminationManager.h  orbitDeterminationTestCases.h  processMpcFile.h  variationalEquationsSolver.h
include/tudat/simulation/observer/: BaseObserver.h  ComputationExpense.h
include/tudat/simulation/propagation_setup/: createCR3BPManifolds.h  createCR3BPPeriodicOrbits.h  createStateDerivativeModel.h  createTorqueModel.h  dynamicsSimulator.h  environmentUpdater.h  propagationCR3BPFullProblem.h  propagationOutput.h  propagationOutputSettings.h  propagationProcessingSettings.h  propagationResults.h  propagationSettings.h  setNumericallyIntegratedStates.h
src/astro/aerodynamics/: flightConditions.cpp  marsDtmAtmosphereModel.cpp  rarefiedFlowAerodynamicCoefficientInterface.cpp  rarefiedFlowInteractionModel.cpp
src/astro/basic_astro/: torqueModelTypes.cpp
src/astro/earth_orientation/: polarMotionCalculator.cpp  precessionNutationCalculator.cpp
src/astro/electromagnetism/: radiationPressureAcceleration.cpp  radiationPressureTargetModel.cpp  reflectionLaw.cpp
src/astro/ephemerides/: rotationalEphemeris.cpp
src/astro/gravitation/: basicSolidBodyTideGravityFieldVariations.cpp  librationPoint.cpp
src/astro/observation_models/: observationViabilityCalculator.cpp
src/astro/propagators/: integrateEquations.cpp  stateDerivativeCircularRestrictedThreeBodyProblem.cpp
src/astro/reference_frames/: aerodynamicAngleCalculator.cpp
src/astro/system_models/: timingSystem.cpp
src/interface/spice/: CMakeLists.txt  spiceInterface.cpp
src/io/: CMakeLists.txt  parseSolarActivityData.cpp  readMpcFile.cpp
src/math/basic/: leastSquaresEstimation.cpp  legendrePolynomials.cpp
src/math/statistics/: powerLawNoiseGeneration.cpp
src/simulation/: BaseSimulator.cpp  CMakeLists.txt  DependentVariables.cpp  DependentVariables.h  FunctionEvaluations.cpp  FunctionEvaluations.h  HybridArcSimulator.cpp  HybridArcSimulator.h  MultiArcSimulator.cpp  MultiArcSimulator.h  SingleArcSimulator.cpp
src/simulation/environment_setup/: CMakeLists.txt  createAtmosphereModel.cpp  createBodies.cpp  createFlightConditions.cpp  createGravityField.cpp  createSystemModel.cpp  defaultBodies.cpp
src/simulation/estimation_setup/: CMakeLists.txt  createObservationViability.cpp  mpcStations.txt
src/simulation/observer/: BaseObserver.cpp  ComputationExpense.cpp  NumericalSolution.cpp  NumericalSolution.h  VariationalEquations.cpp  VariationalEquations.h
src/simulation/propagation_setup/: CMakeLists.txt  createAccelerationModels.cpp  createCR3BPManifolds.cpp  createCR3BPPeriodicOrbits.cpp  createEnvironmentUpdater.cpp  createStateDerivativeModel.cpp  createTorqueModel.cpp  propagationCR3BPFullProblem.cpp  propagationOutput.cpp  propagationOutputSettings.cpp
tests/src/astro/: CMakeLists.txt
tests/src/io/: CMakeLists.txt  unitTestMpcDataReader.cpp  unitTestMpcFileReader.cpp
tests/src/simulation/: unitTestEnvironmentModelSetup.cpp
tests_riva/: CMakeLists.txt  TestMarsDtm.cpp  TestMarsDtm_.cpp  unitTestMarsDtm.cpp
tools/conda.build/: bld.bat  meta.yaml
(+61 files in other folders)
